<resources>
    <string name="app_name">Sift</string>

    <string name="client_id">pFsQuM_0DQdv-g</string>
    <string name="redirect_url">http://www.google.com</string>

    <string name="device_id">83A93BC0EF7E3BAB7AF855EAF3421EC4</string>

    <string name="action_settings">Settings</string>
    <string name="nav_header_add_account">Log in</string>
    <string name="nav_header_remove_account">Remove Account</string>
    <string name="nav_home">Home</string>
    <string name="nav_profile">My Profile</string>
    <string name="nav_inbox">Inbox</string>
    <string name="nav_friends">Friends</string>
    <string name="nav_subreddits">My Subreddits</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_go_to_user">Go To User</string>
    <string name="nav_go_to_subreddit">Go To Subreddit</string>
    <string name="nav_popular">Popular</string>

    <string name="popular">popular</string>

    <string name="remove">Remove</string>
    <string name="go">Go</string>
    <string name="cancel">Cancel</string>
    <string name="remove_account">Remove this account?</string>

    <string name="title">title</string>
    <string name="username">username</string>
    <string name="subreddit">subreddit</string>
    <string name="points">points</string>
    <string name="url">url</string>
    <string name="age">age</string>
    <string name="title_activity_user_info">User Info</string>
    <string name="title_activity_post_detail">Post Detail</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="category">category</string>
    <string name="must_log_in">You must be logged in to perform this action</string>
    <string name="logged_in">Logged in</string>
    <string name="logged_out">Logged out</string>

    <string name="vote">vote</string>
    <string name="body">body</string>
    <string name="from">from</string>
    <string name="domain">domain</string>
    <string name="drawer_open">drawer open</string>
    <string name="drawer_close">drawer close</string>
    <string name="title_activity_friends_list">Friends</string>
    <string name="title_activity_settings">Settings</string>

    <string name="from_label">From:</string>

    <string name="image_url">imageUrl</string>

    <string name="subreddit_id">subredditId</string>
    <string name="subreddit_name">subredditName</string>
    <string name="post_id">postId</string>
    <string name="server_id">serverId</string>

    <string name="paginator_type">paginatorType</string>

    <string name="menu_search">menu search</string>
    <string name="search_hint">Search</string>
    <string name="search_term">searchTerm</string>

    <string name="subscribe">subscribe</string>
    <string name="favorite">favorite</string>
    <string name="add_friend">addFriend</string>

    <string name="subscribed">Subscribed</string>
    <string name="unsubscribed">Unsubscribed</string>

    <string name="overview">overview</string>
    <string name="saved">saved</string>
    <string name="gilded">gilded</string>
    <string name="submitted">submitted</string>
    <string name="comments">comments</string>

    <string name="unsaved">unsaved</string>


    <string name="submissions">Submissions</string>
    <string name="subreddits">Subreddits</string>
    <string name="users">Users</string>

    <string name="subscribers">Subscribers</string>

    <string name="frontPage">FrontPage</string>
    <string name="initial_sync">initialSync</string>
    <string name="isTablet">isTablet</string>
    <string name="selectFirst">selectFirst</string>

    <string name="replies">Replies</string>
    <string name="reply">Reply</string>
    <string name="comment_posted">Comment Posted</string>
    <string name="friend_added">Friend Added</string>
    <string name="friend_removed">Friend Removed</string>
    <string name="user_not_found">User not found</string>
    <string name="subreddit_not_found">Subreddit not found</string>
    <string name="sift">Sift</string>
    <string name="new_message">You have %1$d new message</string>
    <string name="new_messages">You have %1$d new messages</string>


    <string name="link_karma">Link karma: </string>
    <string name="comment_karma">Comment karma: </string>
    <string name="member_for">Member for </string>

    <string name="announcements">announcements</string>

    <string name="logged_in_intent">com.blongdev.sift.loggedIn</string>

    <string name="empty">Empty</string>

    <string name="friends">friends</string>
    <string name="subscriber">subscriber</string>

    <string name="inbox">inbox</string>
    <string name="unread">unread</string>
    <string name="sent">sent</string>
    <string name="mentions">mentions</string>

    <string name="mailbox">mailbox</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_message">Messages</string>
    <string name="title_activity_subreddit_list">Subreddits</string>
    <string name="title_activity_message_detail">Message</string>
    <string name="title_activity_authentication">Authentication</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="title_activity_subreddit">Subreddit</string>
    <string name="title_activity_search_results">SearchResults</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>

    <!-- Compose activity-->
    <string name="compose_title">Title</string>
    <string name="compose_text">Text (optional)</string>
    <string name="compose_url">Url</string>
    <string name="compose_captcha">Enter the characters in the image</string>
    <string name="link">Link</string>
    <string name="add_title">Please add a title</string>
    <string name="add_url">Please add a valid url</string>
    <string name="add_captcha">Please fill in the captcha</string>
    <string name="submit_successful">Submitted successfully</string>
    <string name="submit_error">Error submitting</string>

    <string name="m">m</string>
    <string name="h">h</string>
    <string name="d">d</string>
    <string name="M">M</string>
    <string name="Y">Y</string>
    <string name="minutes">minutes</string>
    <string name="hours">hours</string>
    <string name="days">days</string>
    <string name="months">months</string>
    <string name="years">years</string>

    <!-- Messages -->
    <string name="message_sent">Message sent</string>
    <string name="message_error">Error sending message</string>
    <string name="message_subject">Subject</string>
    <string name="message_body">Body</string>
    <string name="add_subject">Please add a subject</string>
    <string name="add_body">Please add a body</string>
    <string name="re">Re: </string>

    <!--admob unit ids-->
    <string name="admob_unit_id_post_detail">ca-app-pub-0619092467992816/8561604081</string>


    <string name="title_activity_compose_post">Compose Post</string>
    <string name="title_activity_compose_message">Compose Message</string>


    <!-- content descriptions -->
    <string name="send">send</string>
    <string name="create_post">create post</string>
    <string name="loading">loading</string>
    <string name="upvote">upvote</string>
    <string name="downvote">downvote</string>
    <string name="advertisement">advertisement</string>
    <string name="toggle_comments">toggle comments</string>
    <string name="message">message</string>
    <string name="image">image</string>
    <string name="log_out">log out</string>

    <!-- sort options-->
    <string name="sort">Sort</string>
    <string name="sort_hot">Hot</string>
    <string name="sort_new">New</string>
    <string name="sort_rising">Rising</string>
    <string name="sort_controversial">Controversial</string>
    <string name="sort_top">Top</string>

    <string name="time">Time</string>
    <string name="timeHour">Hour</string>
    <string name="timeDay">Day</string>
    <string name="timeWeek">Week</string>
    <string name="timeMonth">Month</string>
    <string name="timeYear">Year</string>
    <string name="timeAll">All</string>

    <string name="sortChanged">com.blongdev.sift.sortChanged</string>

    <string name="network_error">Network Error</string>




</resources>
