<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:text="@string/time"/>

    <RadioGroup
        android:id="@+id/timeGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/timeHour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timeHour"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/timeDay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/timeDay" />

        <RadioButton
            android:id="@+id/timeWeek"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/timeWeek" />

        <RadioButton
            android:id="@+id/timeMonth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/timeMonth" />

        <RadioButton
            android:id="@+id/timeYear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/timeYear" />

        <RadioButton
            android:id="@+id/timeAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/timeAll" />

    </RadioGroup>
</LinearLayout>