<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:text="@string/sort"/>

    <RadioGroup
        android:id="@+id/sortGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/sortHot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sort_hot"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/sortNew"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/sort_new" />

        <RadioButton
            android:id="@+id/sortRising"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/sort_rising" />

        <RadioButton
            android:id="@+id/sortControversial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/sort_controversial" />

        <RadioButton
            android:id="@+id/sortTop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/sort_top" />

    </RadioGroup>
</LinearLayout>