<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.blongdev.sift.SubredditActivity">

    <item
        android:id="@+id/menu_search"
        android:title="@string/menu_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always"/>

    <item
        android:id="@+id/subscribe"
        android:icon="@drawable/ic_favorite_outline_24dp"
        android:title="@string/subscribe"
        app:showAsAction="always"/>

    <item
        android:id="@+id/menu_time"
        android:title="@string/time"
        android:icon="@drawable/ic_schedule_24dp"
        app:showAsAction="always"/>

    <item
        android:id="@+id/menu_sort"
        android:title="@string/sort"
        android:icon="@drawable/ic_sort_24dp"
        app:showAsAction="always"/>
</menu>
