<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:fitsSystemWindows="true"
    android:layout_height="match_parent">

    <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.blongdev.sift.PostDetailActivity">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_scrollFlags="scroll"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay">

                <include layout="@layout/post_detail"/>

            </android.support.v7.widget.Toolbar>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:paddingRight="64dp"
                    android:paddingEnd="64dp"
                    app:layout_collapseMode="pin"
                    android:gravity="center_vertical">

                    <ImageView
                        android:id="@+id/upvote"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:focusable="true"
                        android:background="@android:color/transparent"
                        android:src="@drawable/ic_up_arrow_white_24dp"
                        android:contentDescription="@string/upvote"
                        />

                    <ImageView
                        android:id="@+id/downvote"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:focusable="true"
                        android:background="@android:color/transparent"
                        android:src="@drawable/ic_down_arrow_white_24dp"
                        android:contentDescription="@string/downvote"
                        />

                    <ImageView
                        android:id="@+id/favorite"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:focusable="true"
                        android:background="@android:color/transparent"
                        android:src="@drawable/ic_favorite_outline_24dp"
                        android:contentDescription="@string/favorite"
                        />

                    <ImageView
                        android:id="@+id/reply"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:focusable="true"
                        android:background="@android:color/transparent"
                        android:contentDescription="@string/reply"
                        android:src="@drawable/ic_reply_24dp"
                        />

                </LinearLayout>

        </android.support.design.widget.AppBarLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/background"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="0dp"
            android:paddingLeft="0dp"
            android:paddingRight="0dp"
            android:paddingTop="0dp"
            android:orientation="vertical"
            android:clipToPadding="false"
            android:background="@color/background"
            tools:context="com.blongdev.sift.PostDetailActivity"
            android:layout_alignParentBottom="true"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <FrameLayout android:id="@+id/post_detail_fragment"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="top"
                    android:animateLayoutChanges="true"
                    app:layout_behavior="@string/appbar_scrolling_view_behavior"
                    ></FrameLayout>

                <FrameLayout android:id="@+id/comments_fragment"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/white"
                    android:animateLayoutChanges="true"
                    app:layout_behavior="@string/appbar_scrolling_view_behavior"
                    ></FrameLayout>

            </FrameLayout>

        </LinearLayout>

            <!--<com.google.android.gms.ads.AdView-->
                <!--android:id="@id/adView"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_gravity="bottom|center_horizontal"-->
                <!--app:adSize="BANNER"-->
                <!--android:layout_alignParentBottom="true"-->
                <!--android:layout_centerHorizontal="true"-->
                <!--android:contentDescription="@string/advertisement"-->
                <!--app:adUnitId="@string/admob_unit_id_post_detail">-->
            <!--</com.google.android.gms.ads.AdView>-->

        </RelativeLayout>



        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            app:layout_anchor="@id/appbar"
            app:layout_anchorGravity="bottom|end"
            android:contentDescription="@string/toggle_comments"
            android:focusable="true"
            android:src="@drawable/ic_forum_24dp" />

    </android.support.design.widget.CoordinatorLayout>

</android.support.v4.widget.DrawerLayout>
