<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_gravity="center"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="12dp"
    android:layout_marginRight="12dp"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="0dp"
    card_view:cardCornerRadius="4dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/post_image"
                android:layout_width="72dp"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:contentDescription="@string/image"
                android:paddingRight="@dimen/content_spacer"
                android:paddingEnd="@dimen/content_spacer"/>

            <LinearLayout
                android:id="@+id/post_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/content_spacer"
                android:paddingStart="@dimen/content_spacer"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/post_username"
                        style="@style/PostUsername"
                        />

                    <TextView
                        android:id="@+id/post_subreddit"
                        style="@style/PostSubreddit"
                        android:layout_toRightOf="@id/post_username"
                        android:layout_toEndOf="@id/post_username"
                        />
                </RelativeLayout>


                <TextView
                    android:id="@+id/post_title"
                    style="@style/PostTitle"
                    android:layout_gravity="start"
                    />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/post_points"
                        style="@style/PostPoints"
                        />

                    <TextView
                        android:id="@+id/post_comments"
                        style="@style/PostComments"
                        android:layout_toRightOf="@id/post_points"
                        android:layout_toEndOf="@id/post_points"
                        />

                    <TextView
                        android:id="@+id/post_url"
                        style="@style/PostUrl"
                        android:layout_toRightOf="@id/post_comments"
                        android:layout_toEndOf="@id/post_comments"
                        />

                    <TextView
                        android:id="@+id/post_age"
                        style="@style/PostAge"
                        android:layout_toRightOf="@id/post_url"
                        android:layout_toEndOf="@id/post_url"
                        />

                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center_vertical">

                <android.support.v7.widget.AppCompatImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/upvote"
                    android:focusable="true"
                    android:src="@drawable/ic_expand_less_24dp" />

                <android.support.v7.widget.AppCompatImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/downvote"
                    android:focusable="true"
                    android:src="@drawable/ic_expand_more_24dp" />

            </LinearLayout>

        </LinearLayout>

</android.support.v7.widget.CardView>