<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:layout_width="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.blongdev.sift.ComposePostActivityFragment"
        tools:showIn="@layout/activity_compose_post"
        android:gravity="center_horizontal">


        <TextView
            android:id="@+id/subreddit_label"
            android:textSize="24sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:paddingBottom="@dimen/content_spacer"
            android:layout_centerHorizontal="true"/>

        <RelativeLayout
            android:id="@+id/title_block"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/subreddit_label"
            android:padding="16dp" >

            <TextView
                android:id="@+id/title_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@android:color/white"
                android:text="@string/compose_title"/>

            <EditText
                android:id="@+id/title_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:focusable="true"
                android:backgroundTint="@android:color/white"
                android:layout_below="@id/title_label"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/body_block"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/title_block"
            android:padding="16dp">

            <TextView
                android:id="@+id/body_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@android:color/white"
                android:text="@string/compose_text"/>

            <CheckBox
                android:id="@+id/link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/body_label"
                android:textColor="@android:color/white"
                android:focusable="true"
                android:buttonTint="@android:color/white"
                android:contentDescription="@string/link"
                android:text="@string/link" />

            <EditText
                android:id="@+id/body_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:focusable="true"
                android:backgroundTint="@android:color/white"
                android:layout_below="@id/link"/>


        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/captcha_block"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/body_block"
            android:visibility="gone"
            android:padding="16dp">

            <ImageView
                android:id="@+id/captcha_image"
                android:layout_width="wrap_content"
                android:minHeight="100dp"
                android:minWidth="200dp"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/captcha_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:backgroundTint="@android:color/white"
                android:layout_below="@id/captcha_image"
                android:focusable="true"
                android:layout_alignLeft="@id/captcha_image"
                android:layout_alignStart="@id/captcha_image"
                android:layout_alignRight="@id/captcha_image"
                android:layout_alignEnd="@id/captcha_image"/>

        </RelativeLayout>



    </RelativeLayout>
</ScrollView>
